Horizontal scroll on live site fix, try 1.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -29,6 +29,7 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   height: 100vh;
+  max-width: 100%;
 }
 @keyframes gradient {
   0% {
